rustdocs/errors/rust-bitcoin-bitcoin-src-crypto-taproot.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:7:5
  |
7 | use core::borrow::Borrow;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:8:5
  |
8 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:10:5
   |
10 | use core::ops::Deref;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:14:5
   |
14 | use internals::array::ArrayExt;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 7 + extern crate internals;
   |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:9:5
  |
9 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:15:5
   |
15 | use internals::{impl_to_hex_from_lower_hex, write_err};
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 7 + extern crate internals;
   |

error[E0432]: unresolved import `io`
  --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:16:5
   |
16 | use io::Write;
   |     ^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::io`

error[E0432]: unresolved import `crate::prelude`
  --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:19:12
   |
19 | use crate::prelude::{DisplayHex, Vec};
   |            ^^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::prelude`

error[E0432]: unresolved import `crate::sighash`
  --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:20:12
   |
20 | use crate::sighash::{InvalidSighashTypeError, TapSighashType};
   |            ^^^^^^^ use of unresolved module or unlinked crate `sighash`
   |
help: you might be missing a crate named `sighash`, add it to your project and import it in your code
   |
 7 + extern crate sighash;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
   --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:153:9
    |
153 |         hex::fmt_hex_exact!(f, MAX_LEN, self, hex::Case::Lower)
    |         ^^^ use of unresolved module or unlinked crate `hex`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `secp256k1`
  --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:29:20
   |
29 |     pub signature: secp256k1::schnorr::Signature,
   |                    ^^^^^^^^^ use of unresolved module or unlinked crate `secp256k1`
   |
   = help: you might be missing a crate named `secp256k1`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:83:88
   |
83 | ...sult<(), io::Error> {
   |             ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
83 -     pub fn serialize_to_writer<W: Write + ?Sized>(&self, writer: &mut W) -> Result<(), io::Error> {
83 +     pub fn serialize_to_writer<W: Write + ?Sized>(&self, writer: &mut W) -> Result<(), i8::Error> {
   |
help: consider importing this module
   |
 7 + use std::io;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:127:77
    |
127 | ...sult<(), io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
127 -     pub fn write_to<W: Write + ?Sized>(&self, writer: &mut W) -> Result<(), io::Error> {
127 +     pub fn write_to<W: Write + ?Sized>(&self, writer: &mut W) -> Result<(), i8::Error> {
    |
help: consider importing this module
    |
  7 + use std::io;
    |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:255:6
    |
255 | impl TryFrom<SerializedSignature> for Signature {
    |      ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
  7 + use std::convert::TryFrom;
    |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:261:10
    |
261 | impl<'a> TryFrom<&'a SerializedSignature> for Signature {
    |          ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
  7 + use std::convert::TryFrom;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `secp256k1`
   --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:366:15
    |
366 |     Secp256k1(secp256k1::Error),
    |               ^^^^^^^^^ use of unresolved module or unlinked crate `secp256k1`
    |
    = help: you might be missing a crate named `secp256k1`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `secp256k1`
   --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:396:11
    |
396 | impl From<secp256k1::Error> for SigFromSliceError {
    |           ^^^^^^^^^ use of unresolved module or unlinked crate `secp256k1`
    |
    = help: you might be missing a crate named `secp256k1`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `secp256k1`
   --> ../rust-bitcoin/bitcoin/src/crypto/taproot.rs:397:16
    |
397 |     fn from(e: secp256k1::Error) -> Self { Self::Secp256k1(e) }
    |                ^^^^^^^^^ use of unresolved module or unlinked crate `secp256k1`
    |
    = help: you might be missing a crate named `secp256k1`

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0405, E0432, E0433.
For more information about an error, try `rustc --explain E0405`.
